# voicekit-py

./: .gitignore  CLAUDE.md  DESIGN.md  NOTICE  README.md  REFERENCE_NOTES.md  pyproject.toml  voicekit-step7-handoff.md
.github/workflows/: ci.yml
data/fixtures/: README.md
docs/: vuv8_c1_null.md  vuv_c1_decision.md  vuv_r1_null.md  vuv_rho_env.md  working_method.md
src/voicekit/: __init__.py  _matlab_compat.py  framing.py  signal.py
src/voicekit/eval/: __init__.py  score.py
src/voicekit/features/: __init__.py  config.py  extract.py  flow.py  flow_derivation.py  framework.py  prep.py  result.py  spectral.py  timing.py
src/voicekit/gif/: __init__.py  ame.py  closed_phase.py  config.py  gaussian.py  goi_selection.py  mask.py  weighted_lp.py
src/voicekit/iaif/: __init__.py  iaif.py
src/voicekit/io/: __init__.py  resample.py  wav.py
src/voicekit/lfmodel/: __init__.py  timing.py
src/voicekit/lpc/: __init__.py  autocorrelation.py  covariance.py  frames.py  result.py
src/voicekit/pitch/: __init__.py
src/voicekit/vuv/: __init__.py  conditioning.py  decision.py  features.py  grid.py
src/voicekit/yaga/: __init__.py  _matlab_compat.py  detector.py  dp_costs.py  dp_forward.py  dp_kernels.py  dp_traceback.py  group_delay.py  phase_slope.py  swt.py
tests/: test_capture_refpaths.py  test_eval_score.py  test_features_extract.py  test_features_flow.py  test_features_flow_derivation.py  test_features_framework.py  test_features_spectral.py  test_features_timing.py  test_framing.py  test_gif_agauss.py  test_gif_ame.py  test_gif_closed_phase.py  test_gif_cycle_mask.py  test_gif_feature_mask.py  test_gif_features_wiring.py  test_gif_goi_selection.py  test_gif_mask.py  test_gif_rgauss.py  test_gif_weight_convention.py  test_iaif.py  test_io.py  test_lfmodel_timing.py  test_lpc.py  test_lpc_frames.py  test_package.py  test_signal.py  test_voicing_mask.py  test_vuv_conditioning.py  test_vuv_conditioning_fixture.py  test_vuv_detector.py  test_vuv_discriminating.py  test_vuv_features.py  test_vuv_features_parity.py  test_vuv_fixture.py  test_vuv_grid.py  test_vuv_r1.py  test_yaga_detector.py  test_yaga_dp_costs.py  test_yaga_dp_forward.py  test_yaga_dp_kernels.py  (+6 more)
tests/golden/: README.md  vowel_f0100_16k.agauss_flow.npz  vowel_f0100_16k.ame_flow.npz  vowel_f0100_16k.cp.npz  vowel_f0100_16k.gifw.npz  vowel_f0100_16k.npz  vowel_f0100_16k.rgauss_flow.npz  vowel_f0120_8k.agauss_flow.npz  vowel_f0120_8k.ame_flow.npz  vowel_f0120_8k.gifw.npz  vowel_f0120_8k.npz  vowel_f0120_8k.rgauss_flow.npz  vowel_glide_16k.agauss_flow.npz  vowel_glide_16k.ame_flow.npz  vowel_glide_16k.cp.npz  vowel_glide_16k.gifw.npz  vowel_glide_16k.npz  vowel_glide_16k.rgauss_flow.npz  wcovar_weight_convention.npz  wfilters_bior15.npz
tests/golden/capture/: capture_cp.m  capture_cp.py  capture_features.m  capture_features.py  capture_gif_flow.m  capture_gif_flow.py  capture_gif_weights.m  capture_gif_weights.py  capture_golden.py  capture_one.m  capture_wcovar.m  capture_wcovar.py  instrument.py  make_inputs.py  refpaths.py
tests/synthetic/: README.md  capture_vuv_features.m  capture_vuv_features.py  make_vuv_conditioning.py  make_vuv_discriminating.py  make_vuv_fixture.py  vuv_d1_offset_16k.labels.npz  vuv_d1_offset_16k.vuvfeat.npz  vuv_d2_vfric_16k.labels.npz  vuv_d2_vfric_16k.vuvfeat.npz  vuv_d3_breathy_16k.labels.npz  vuv_d3_breathy_16k.vuvfeat.npz  vuv_fixture.py  vuv_h_cases.labels.npz  vuv_svuvs_16k.labels.npz  vuv_svuvs_16k.vuvfeat.npz
tests/validation/: test_openglot_driver.py  test_openglot_loader.py  test_openglot_reference.py  test_report.py  test_strata.py
validation/: README.md  __init__.py  report.py
validation/openglot/: __init__.py  cli.py  driver.py  loader.py  manifest_r1.tsv  reference.py  strata.py
