[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicekit"
version = "0.1.0.dev0"
description = "Voice analysis toolbox: glottal inverse filtering, GCI/GOI detection, and voice source feature extraction, from first principles"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jon Gudnason", email = "jg@ru.is" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/jgudnason/voicekit-py"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "scipy-stubs",
    "matplotlib",
    # Independent cross-check of our from-scratch SWT filter taps (test-only,
    # never a runtime dependency); see DESIGN.md dependency policy.
    "PyWavelets",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voicekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Import the package straight from src/, independent of the editable-install
# .pth file (iCloud Drive marks that file hidden and Python 3.11+ skips it)
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "NPY", # numpy-specific rules
]

# numpy's stubs use 3.12+ `type` statements, so mypy must run on a modern
# interpreter (CI type-checks once on the newest matrix version)
[tool.mypy]
files = ["src"]
strict = true
