[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicekit"
version = "0.1.0.dev0"
description = "Voice analysis toolbox: glottal inverse filtering, GCI/GOI detection, and voice source feature extraction, from first principles"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jon Gudnason", email = "jg@ru.is" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/jgudnason/voicekit-py"

[project.optional-dependencies]
dev = [
    # The three tools whose output gates CI (pytest runs the suite; ruff and mypy
    # gate lint/type/format) are pinned to EXACT versions. Bare specifiers let CI's
    # pip resolve a different version from the developer's, with certainty and no
    # lockfile to reconcile them -- and `ruff format` output is version-dependent, so
    # an unpinned formatter makes the committed tree non-reconstructible from the
    # recorded inputs (the same defect class as a globbing corpus loader). The pins
    # below are "whatever local currently resolves" as of 2026-07-24, NOT a considered
    # upgrade decision; bump them deliberately, as their own commit, when upgrading.
    "pytest==9.1.1",
    "pytest-cov",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "scipy-stubs",
    "matplotlib",
    # Independent cross-check of our from-scratch SWT filter taps (test-only,
    # never a runtime dependency); see DESIGN.md dependency policy.
    "PyWavelets",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voicekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Import the package straight from src/, independent of the editable-install
# .pth file (iCloud Drive marks that file hidden and Python 3.11+ skips it).
# "." puts the repo root on the path so the committed ``validation`` package is
# importable by its CI unit tests (its ground-truth-construction code is tested on
# synthetic inputs in default CI; the corpus runs are not -- DESIGN.md section 5).
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "NPY", # numpy-specific rules
]

# numpy's stubs use 3.12+ `type` statements, so mypy must run on a modern
# interpreter (CI type-checks once on the newest matrix version)
[tool.mypy]
# validation/ manufactures ground-truth references; strict typing there is not
# optional (a mistyped reference is a silent wrong answer). Ratified at the R1/R2
# driver gate. src/ and validation/ under the same strict settings.
files = ["src", "validation"]
strict = true
